--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "table-booking-system",
+  "name": "little-lemon",
   "version": "0.1.0",
   "homepage": "https://joshn28.github.io/little-lemon",
   "private": true,
